--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@types/jsdom": "^21.1.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "csv-parse": "^5.5.6",
     "dayjs": "^1.11.11",
     "embla-carousel-react": "^8.1.1",
+    "jsdom": "^24.1.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
