--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest --run --coverage"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
@@ -19,21 +20,29 @@
     "csv-parse": "^5.5.6",
     "dayjs": "^1.11.11",
     "embla-carousel-react": "^8.1.1",
-    "jsdom": "^24.1.0",
+    "google-auth-library": "^9.11.0",
+    "google-spreadsheet": "^4.1.2",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "sanitize-html": "^2.13.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@testing-library/react": "^16.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/sanitize-html": "^2.11.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "@vitest/coverage-v8": "^2.0.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "jsdom": "^24.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^2.0.3"
   }
 }
