--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "vitest --run --coverage"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-scroll-area": "^1.1.0",
@@ -27,7 +28,8 @@
     "react-dom": "^18",
     "sanitize-html": "^2.13.0",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.9.1"
   },
   "devDependencies": {
     "@testing-library/react": "^16.0.0",
