--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "vitest --run --coverage"
   },
   "dependencies": {
+    "@googleapis/docs": "^3.0.2",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-navigation-menu": "^1.1.4",
