--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "embla-carousel-react": "^8.1.1",
     "google-auth-library": "^9.11.0",
     "google-spreadsheet": "^4.1.2",
-    "next": "14.2.3",
+    "next": "^14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "sanitize-html": "^2.13.0",
@@ -42,7 +42,6 @@
     "@vitest/coverage-v8": "^2.0.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
-    "jsdom": "^24.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
