--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "test": "vitest --run --coverage"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
     "@googleapis/docs": "^3.0.2",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
